--- a/index.html
+++ b/index.html
@@ -3,124 +3,162 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Free, beautiful sleep cycle calculator for better rest">
-  <meta name="keywords" content="free sleep planner, aesthetic sleep app, sleep cycle calculator">
-  <title>Peace Renew - Beautiful Sleep Optimization</title>
+  <meta name="description" content="Stunning free sleep planner with nature-inspired design">
+  <meta name="keywords" content="beautiful sleep app, free sleep cycle planner, sleep calculator">
+  <title>Peace Renew - Nature-Inspired Sleep Oasis</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
+    body { font-family: 'Poppins', sans-serif; }
+    @keyframes breathe { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.02); } }
     @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-    .fade-in { animation: fadeIn 0.5s ease-in; }
+    .breathe { animation: breathe 3s infinite; }
+    .fade-in { animation: fadeIn 0.8s ease-in; }
     .hover-scale { transition: transform 0.2s; }
     .hover-scale:hover { transform: scale(1.05); }
+    .shadow-glow { box-shadow: 0 0 15px rgba(59, 130, 246, 0.5); }
+    .parallax { background-attachment: fixed; background-size: cover; background-position: center; }
   </style>
 </head>
-<body class="bg-gradient-to-b from-blue-100 to-purple-100 dark:from-gray-800 dark:to-gray-900 font-sans min-h-screen">
+<body class="bg-gradient-to-b from-blue-900 to-green-900 dark:from-gray-900 dark:to-gray-800 text-gray-200 min-h-screen relative">
+  <!-- Starry Background -->
+  <canvas id="starryBg" class="fixed inset-0 z-0 opacity-50"></canvas>
+
   <!-- Header -->
-  <header class="bg-blue-600 dark:bg-blue-900 text-white p-6 text-center">
-    <h1 class="text-3xl font-bold fade-in">Peace Renew</h1>
-    <p class="text-lg mt-2">Your Free, Beautiful Sleep Planner</p>
-    <div class="bg-blue-100 dark:bg-blue-700 text-blue-800 dark:text-blue-200 p-2 rounded mt-4 inline-block">No Tracking, 100% Private</div>
+  <header class="relative bg-transparent p-6 text-center">
+    <h1 class="text-4xl font-semibold text-white fade-in">Peace Renew</h1>
+    <p class="text-lg mt-2 text-gray-300">Your Nature-Inspired Sleep Oasis</p>
+    <div class="bg-blue-900 bg-opacity-50 text-white p-2 rounded mt-4 inline-block shadow-glow">No Tracking, 100% Private</div>
     <button onclick="toggleDarkMode()" class="mt-2 text-white hover:text-yellow-300">🌙 Toggle Dark Mode</button>
   </header>
 
   <!-- Sleep Calculator -->
-  <section class="p-6 max-w-4xl mx-auto">
-    <h2 class="text-2xl font-semibold text-gray-800 dark:text-gray-200 mb-4 fade-in">Plan Your Perfect Sleep</h2>
-    <form id="sleep-form" class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-lg">
-      <label for="wake-time" class="block mb-2 text-gray-700 dark:text-gray-300">Wake-Up Time</label>
-      <input type="time" id="wake-time" class="border p-2 w-full mb-4 rounded dark:bg-gray-700 dark:text-white" value="07:30">
-      <label for="fall-asleep" class="block mb-2 text-gray-700 dark:text-gray-300">Time to Fall Asleep (min)</label>
-      <select id="fall-asleep" class="border p-2 w-full mb-4 rounded dark:bg-gray-700 dark:text-white">
+  <section class="p-6 max-w-4xl mx-auto relative z-10">
+    <h2 class="text-3xl font-semibold text-white mb-6 fade-in">Plan Your Sleep Oasis</h2>
+    <form id="sleep-form" class="bg-white bg-opacity-10 backdrop-blur-lg p-6 rounded-lg shadow-lg breathe">
+      <label for="wake-time" class="block mb-2 text-white">Wake-Up Time</label>
+      <input type="time" id="wake-time" class="border p-2 w-full mb-4 rounded bg-gray-800 text-white" value="07:30">
+      <label for="fall-asleep" class="block mb-2 text-white">Time to Fall Asleep (min)</label>
+      <select id="fall-asleep" class="border p-2 w-full mb-4 rounded bg-gray-800 text-white">
         <option value="5">5</option><option value="10">10</option><option value="15" selected>15</option>
         <option value="20">20</option><option value="25">25</option><option value="30">30</option>
       </select>
-      <label for="cycle-length" class="block mb-2 text-gray-700 dark:text-gray-300">Cycle Length (min)</label>
-      <select id="cycle-length" class="border p-2 w-full mb-4 rounded dark:bg-gray-700 dark:text-white">
+      <label for="cycle-length" class="block mb-2 text-white">Cycle Length (min)</label>
+      <select id="cycle-length" class="border p-2 w-full mb-4 rounded bg-gray-800 text-white">
         <option value="85">85</option><option value="90" selected>90</option><option value="95">95</option>
       </select>
-      <label for="mood" class="block mb-2 text-gray-700 dark:text-gray-300">Current Mood</label>
-      <select id="mood" class="border p-2 w-full mb-4 rounded dark:bg-gray-700 dark:text-white">
+      <label for="mood" class="block mb-2 text-white">Current Mood</label>
+      <select id="mood" class="border p-2 w-full mb-4 rounded bg-gray-800 text-white">
         <option value="stressed">Stressed</option><option value="calm">Calm</option>
         <option value="anxious">Anxious</option><option value="energized">Energized</option>
       </select>
-      <button type="submit" class="bg-blue-600 text-white p-3 rounded w-full hover-scale" aria-label="Calculate Sleep Times">Calculate</button>
+      <button type="submit" class="bg-gradient-to-r from-blue-500 to-purple-500 text-white p-3 rounded w-full hover-scale shadow-glow" aria-label="Calculate Sleep Times">Calculate</button>
     </form>
     <div id="results" class="mt-6 text-center fade-in">
-      <canvas id="sleepTimeline" class="w-full h-32"></canvas>
-      <!-- Results: Interactive timeline with bedtimes -->
+      <canvas id="sleepGlobe" class="w-full h-48"></canvas>
+      <!-- Interactive 3D globe or wave -->
     </div>
   </section>
 
-  <!-- Sleep Streaks -->
-  <section class="p-6 max-w-4xl mx-auto">
-    <h2 class="text-2xl font-semibold text-gray-800 dark:text-gray-200 mb-4 fade-in">Your Sleep Journey</h2>
-    <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-lg text-center">
-      <p class="text-lg">Streak: <span id="streak">0</span> days</p>
-      <svg id="starrySky" class="w-full h-24 mt-4"></svg>
-      <p class="text-sm mt-2 text-gray-600 dark:text-gray-400">Follow your sleep plan tonight to earn a star!</p>
-      <p class="text-lg mt-4">Sleep Score: <span id="sleepScore">80</span>/100</p>
+  <!-- Sleep Journey -->
+  <section class="p-6 max-w-4xl mx-auto relative z-10 parallax" style="background-image: url('forest.jpg');">
+    <h2 class="text-3xl font-semibold text-white mb-6 fade-in">Your Sleep Journey</h2>
+    <div class="bg-white bg-opacity-10 backdrop-blur-lg p-6 rounded-lg shadow-lg text-center">
+      <p class="text-lg text-white">Path Progress: <span id="streak">0</span> days</p>
+      <svg id="forestPath" class="w-full h-24 mt-4"></svg>
+      <p class="text-sm mt-2 text-gray-300">Follow your sleep plan to grow your forest!</p>
+      <p class="text-lg mt-4 text-white">Sleep Harmony Score: <span id="sleepScore">85</span>/100</p>
     </div>
   </section>
 
   <!-- Calming Sounds -->
-  <section class="p-6 max-w-4xl mx-auto">
-    <h2 class="text-2xl font-semibold text-gray-800 dark:text-gray-200 mb-4 fade-in">Calming Sounds</h2>
+  <section class="p-6 max-w-4xl mx-auto relative z-10 parallax" style="background-image: url('ocean.jpg');">
+    <h2 class="text-3xl font-semibold text-white mb-6 fade-in">Calming Sounds</h2>
     <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
-      <button class="bg-blue-200 dark:bg-blue-700 p-4 rounded-lg hover-scale" onclick="playSound('rain')">Rain</button>
-      <button class="bg-blue-200 dark:bg-blue-700 p-4 rounded-lg hover-scale" onclick="playSound('ocean')">Ocean Waves</button>
-      <button class="bg-blue-200 dark:bg-blue-700 p-4 rounded-lg hover-scale" onclick="playSound('white-noise')">White Noise</button>
-      <button class="bg-purple-200 dark:bg-purple-700 p-4 rounded-lg hover-scale" onclick="previewPremium()">Forest (Premium)</button>
+      <button class="bg-blue-900 bg-opacity-50 p-4 rounded-lg hover-scale shadow-glow" onclick="playSound('rain')">Rain</button>
+      <button class="bg-blue-900 bg-opacity-50 p-4 rounded-lg hover-scale shadow-glow" onclick="playSound('ocean')">Ocean Waves</button>
+      <button class="bg-blue-900 bg-opacity-50 p-4 rounded-lg hover-scale shadow-glow" onclick="playSound('white-noise')">White Noise</button>
+      <button class="bg-purple-900 bg-opacity-50 p-4 rounded-lg hover-scale shadow-glow" onclick="previewPremium()">Waterfall (Premium)</button>
     </div>
   </section>
 
   <!-- Sleep Essentials -->
-  <section class="p-6 max-w-4xl mx-auto">
-    <h2 class="text-2xl font-semibold text-gray-800 dark:text-gray-200 mb-4 fade-in">Sleep Essentials</h2>
+  <section class="p-6 max-w-4xl mx-auto relative z-10">
+    <h2 class="text-3xl font-semibold text-white mb-6 fade-in">Sleep Essentials</h2>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-      <div class="bg-white dark:bg-gray-800 p-4 rounded-lg shadow border border-blue-200 dark:border-blue-600 hover-scale">
+      <div class="bg-white bg-opacity-10 backdrop-blur-lg p-4 rounded-lg shadow border border-blue-200 hover-scale">
         <img src="mattress.jpg" alt="Mattress" class="w-full h-32 object-cover rounded lazy" loading="lazy">
-        <p class="mt-2 text-gray-700 dark:text-gray-300">Memory Foam Mattress</p>
-        <a href="affiliate-link" class="text-blue-600 dark:text-blue-400">Buy Now</a>
+        <p class="mt-2 text-white">Memory Foam Mattress</p>
+        <a href="https://amzn.to/44sCX91" rel="nofollow" class="text-blue-400 hover:text-blue-300">Shop Now</a>
       </div>
-      <!-- More products -->
+      <!-- More products via same affiliate link -->
     </div>
-    <p class="text-sm text-gray-600 dark:text-gray-400 mt-2">We may earn a commission from purchases.</p>
+    <p class="text-sm text-gray-300 mt-2">As an Amazon Associate, we earn from qualifying purchases.</p>
   </section>
 
   <!-- Premium -->
-  <section class="p-6 max-w-4xl mx-auto bg-blue-50 dark:bg-blue-900">
-    <h2 class="text-2xl font-semibold text-gray-800 dark:text-gray-200 mb-4 fade-in">Upgrade to Premium</h2>
-    <ul class="list-disc pl-6 mb-4 text-gray-700 dark:text-gray-300">
-      <li>Custom Themes (Starry Night, Ocean Sunset)</li>
-      <li>Premium Sounds (Lofi, Guided Breathing)</li>
-      <li>Sleep Insights Dashboard</li>
+  <section class="p-6 max-w-4xl mx-auto bg-blue-900 bg-opacity-50 relative z-10">
+    <h2 class="text-3xl font-semibold text-white mb-6 fade-in">Upgrade to Premium</h2>
+    <ul class="list-disc pl-6 mb-4 text-gray-300">
+      <li>Nature Themes (Twilight Grove, Aurora Sky)</li>
+      <li>Premium Sounds (Waterfall, Lofi Sleep)</li>
+      <li>Harmony Dashboard</li>
       <li>Offline Mode</li>
     </ul>
-    <button class="bg-blue-600 text-white p-3 rounded w-full hover-scale">Get Premium ($2.99/mo)</button>
+    <button class="bg-gradient-to-r from-blue-500 to-purple-500 text-white p-3 rounded w-full hover-scale shadow-glow">Get Premium ($2.99/mo)</button>
   </section>
 
   <!-- Sleep Tips -->
-  <section class="p-6 max-w-4xl mx-auto">
-    <h2 class="text-2xl font-semibold text-gray-800 dark:text-gray-200 mb-4 fade-in">Sleep Better Tonight</h2>
+  <section class="p-6 max-w-4xl mx-auto relative z-10 parallax" style="background-image: url('stars.jpg');">
+    <h2 class="text-3xl font-semibold text-white mb-6 fade-in">Sleep Better Tonight</h2>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-      <div class="bg-white dark:bg-gray-800 p-4 rounded-lg shadow hover-scale">Dim lights 1-2 hours before bed...</div>
+      <div class="bg-white bg-opacity-10 backdrop-blur-lg p-4 rounded-lg hover-scale shadow-glow">Dim lights 1-2 hours before bed...</div>
       <!-- More tips -->
     </div>
   </section>
 
   <!-- Share -->
-  <section class="p-6 max-w-4xl mx-auto text-center">
-    <h2 class="text-2xl font-semibold text-gray-800 dark:text-gray-200 mb-4 fade-in">Share Your Sleep Plan</h2>
-    <button class="bg-blue-600 text-white p-3 rounded mr-2 hover-scale" onclick="shareToX()">Share to X</button>
-    <button class="bg-blue-600 text-white p-3 rounded hover-scale" onclick="shareToTwitter()">Share to Twitter</button>
+  <section class="p-6 max-w-4xl mx-auto text-center relative z-10">
+    <h2 class="text-3xl font-semibold text-white mb-6 fade-in">Share Your Sleep Oasis</h2>
+    <button class="bg-gradient-to-r from-blue-500 to-purple-500 text-white p-3 rounded mr-2 hover-scale shadow-glow" onclick="shareToX()">Share to X</button>
+    <button class="bg-gradient-to-r from-blue-500 to-purple-500 text-white p-3 rounded hover-scale shadow-glow" onclick="shareToTwitter()">Share to Twitter</button>
   </section>
 
   <!-- Footer -->
-  <footer class="bg-gray-800 text-white p-6 text-center">
-    <p>© 2025 Peace Renew. No data collected. <a href="/contact" class="text-blue-300">Contact</a></p>
+  <footer class="bg-gray-900 text-white p-6 text-center relative z-10">
+    <p>© 2025 Peace Renew. No data collected. <a href="/contact" class="text-blue-400">Contact</a></p>
   </footer>
 
   <script>
+    // Starry Background
+    const canvas = document.getElementById('starryBg');
+    const ctx = canvas.getContext('2d');
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+    const stars = [];
+    for (let i = 0; i < 100; i++) {
+      stars.push({
+        x: Math.random() * canvas.width,
+        y: Math.random() * canvas.height,
+        radius: Math.random() * 2,
+        alpha: Math.random()
+      });
+    }
+    function animateStars() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      stars.forEach(star => {
+        ctx.beginPath();
+        ctx.arc(star.x, star.y, star.radius, 0, Math.PI * 2);
+        ctx.fillStyle = `rgba(255, 255, 255, ${star.alpha})`;
+        ctx.fill();
+        star.alpha += Math.random() * 0.05 - 0.025;
+        if (star.alpha < 0) star.alpha = 1;
+        if (star.alpha > 1) star.alpha = 0;
+      });
+      requestAnimationFrame(animateStars);
+    }
+    animateStars();
+
     // Dark Mode
     function toggleDarkMode() {
       document.documentElement.classList.toggle('dark');
@@ -137,29 +175,36 @@
       const mood = document.getElementById('mood').value;
       // Calculate bedtimes (4, 5, 6 cycles)
       const results = document.getElementById('results');
-      results.innerHTML = '<p class="text-gray-700 dark:text-gray-300">Bedtimes: 10:00 PM, 11:30 PM, 1:00 AM</p>';
-      // Draw timeline with Chart.js (placeholder)
-      drawSleepTimeline(wakeTime, cycleLength);
+      results.innerHTML = '<p class="text-white">Bedtimes: 10:00 PM, 11:30 PM, 1:00 AM</p>';
+      drawSleepGlobe(wakeTime, cycleLength);
+      showMoodTip(mood);
     });
 
-    function drawSleepTimeline(wakeTime, cycleLength) {
-      // Use Chart.js or D3.js to draw timeline
-      const ctx = document.getElementById('sleepTimeline').getContext('2d');
-      // Placeholder: Draw waves
+    function drawSleepGlobe(wakeTime, cycleLength) {
+      // Placeholder: Use Three.js for 3D globe
+      const ctx = document.getElementById('sleepGlobe').getContext('2d');
+      ctx.fillStyle = 'rgba(255, 255, 255, 0.1)';
+      ctx.beginPath();
+      ctx.arc(100, 100, 80, 0, Math.PI * 2);
+      ctx.fill();
     }
 
-    // Streaks
+    function showMoodTip(mood) {
+      // Show mood-specific tip (placeholder)
+      console.log(`Mood: ${mood}`);
+    }
+
+    // Sleep Journey
     let streak = localStorage.getItem('streak') || 0;
     document.getElementById('streak').textContent = streak;
-    function updateStarrySky() {
-      // Draw stars based on streak
-      const svg = document.getElementById('starrySky');
-      // Placeholder: Add <circle> for each streak day
+    function updateForestPath() {
+      // Draw forest path with SVG
+      const svg = document.getElementById('forestPath');
+      // Placeholder: Add <path> for each streak day
     }
 
     // Sounds
     function playSound(sound) {
-      // Play sound via <audio> tag
       const audio = new Audio(`sounds/${sound}.mp3`);
       audio.play();
     }
@@ -169,10 +214,10 @@
 
     // Sharing
     function shareToX() {
-      window.open('https://x.com/intent/tweet?text=Just planned my perfect sleep with Peace Renew’s gorgeous app! 🌙 Try it free at peacerenew.app');
+      window.open('https://x.com/intent/tweet?text=Transformed my sleep with Peace Renew’s stunning app! 🌿 Try it free at peacerenew.app');
     }
     function shareToTwitter() {
-      window.open('https://twitter.com/intent/tweet?text=Just planned my perfect sleep with Peace Renew’s gorgeous app! 🌙 Try it free at peacerenew.app');
+      window.open('https://twitter.com/intent/tweet?text=Transformed my sleep with Peace Renew’s stunning app! 🌿 Try it free at peacerenew.app');
     }
   </script>
 </body>
